@@ -1,0 +1,16 @@
+data:extend({
+    {
+        type = "string-setting",
+        name = "pm-vanadium-robot-speed-multiplier",
+        setting_type = "startup",
+        default_value = "1x",
+        allowed_values = {"0.25x", "0.5x", "0.75x", "1x", "1.25x", "1.5x", "1.75x", "2x"}
+    },
+    {
+        type = "string-setting",
+        name = "pm-lithium-robot-speed-multiplier",
+        setting_type = "startup",
+        default_value = "1x",
+        allowed_values = {"0.25x", "0.5x", "0.75x", "1x", "1.25x", "1.5x", "1.75x", "2x"}
+    },
+})
